# exo-langgraph01

./: .clinerules  .coverage  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Exo-LangGraphDesign01.md  LICENSE  MANIFEST.in  README.md  coverage.xml  dev-requirements.txt  docker-compose.yml  pyproject.toml  run.py  run_without_install.py  setup.py
.github/workflows/: ci.yml
docs/: Makefile  README.md
docs/source/: api.rst  architecture.rst  conf.py  contributing.rst  core.rst  development.rst  index.rst  installation.rst  interfaces.rst  introduction.rst  knowledge.rst  mcp.rst  quickstart.rst
docs/source/_static/: .gitkeep
docs/source/_templates/: .gitkeep
exo/: .env.example  README.md  __main__.py  config.py  requirements.txt  setup.bat  setup.py  setup.sh
exo/api/: README.md  app.py  routes.py  websocket.py
exo/core/: README.md  agent.py  cnc.py  domain_agents.py  pia.py  system.py
exo/interfaces/cli/: README.md  __main__.py  main.py
exo/interfaces/electron/: README.md  __main__.py  index.html  main.js  package.json  preload.js
exo/interfaces/electron/assets/: .gitkeep
exo/interfaces/web/: README.md  next.config.js  package.json  tailwind.config.js
exo/interfaces/web/components/: AnimatedDot.js  Chat.js
exo/interfaces/web/pages/: _app.js  index.js
exo/interfaces/web/styles/: globals.css
exo/knowledge/: README.md  init.py  system.py
exo/mcp/: README.md  __main__.py  client.py  server.py
prompts/: README.md  system_prompt.txt  user_prompt.txt
tests/: README.md  test_api.py  test_core.py  test_knowledge.py  test_mcp.py
