[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exo-agent"
version = "0.1.0"
description = "A multi-agent AI system with hierarchical agent architecture"
readme = "README.md"
authors = [
    {name = "exo Team", email = "info@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    # Core Agent System
    "autogen>=0.8.6",
    "langgraph>=0.0.15",
    "openai>=1.3.0",
    
    # API Layer
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "websockets>=11.0.3",
    "pydantic>=2.4.2",
    
    # Knowledge System
    "chromadb>=0.4.18",
    "neo4j>=5.14.0",
    
    # Desktop Control
    "pyautogui>=0.9.54",
    
    # CLI Interface
    "click>=8.1.7",
    "rich>=13.6.0",
    "textual>=0.38.1",
]

[project.urls]
Homepage = "https://github.com/spocksbrain/exo-langgraph01"
Issues = "https://github.com/spocksbrain/exo-langgraph01/issues"

[project.scripts]
exo = "exo.__main__:main"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=exo --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
source = ["exo"]
omit = ["tests/*", "exo/interfaces/web/*", "exo/interfaces/electron/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
